--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -2,7 +2,12 @@
   <div class="container">
 
     <nav class="main-nav">
+
       <ul>
+        <form action="/search" method="GET" class="search-form">
+          <input type="text" name="q" placeholder="Search..." />
+          <button type="submit"><i class="fas fa-search"></i></button>
+        </form>
         <li><a href="/">Home</a></li>|
         <li><a href="/shop">Shop</a></li>|
         <li><a href="/contact">Contact</a></li>|
