--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -2,8 +2,10 @@
   <div class="container footer-row">
     <!-- Left: Logo + tagline -->
     <div class="footer-left">
-      <img src="/images/Venture Creations.webp" alt="Venture Creations Logo" class="footer-logo" />
-      <p class="tagline">Creating shirts to support all of life’s ventures.</p>
+      <img src="/images/VentureCreations.webp" alt="Venture Creations Logo" class="footer-logo" />
+      <p class="tagline">Custom shirts to support all of life’s ventures.</p>
+      <p class="copyright">&copy; <%= new Date().getFullYear() %> Venture Creations. All rights reserved.</p>
+
     </div>
 
     <!-- Right: Links + Socials -->
@@ -30,8 +32,6 @@
           <i class="fab fa-pinterest-p"></i>
         </a>
       </div>
-
-      <p class="copyright">&copy; <%= new Date().getFullYear() %> Venture Creations. All rights reserved.</p>
     </div>
   </div>
 </footer>
