--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -365,7 +365,7 @@ body {
   flex-wrap: wrap;
   gap: 1.5rem;
   padding: 0;
-  margin: 0 0 1rem 0;
+  margin: 30px 0 1rem 0;
 }
 
 .footer-links a {
@@ -381,9 +381,9 @@ body {
 
 .social-icons {
   display: flex;
-  gap: 1rem;
-  margin-bottom: 1rem;
-  margin-right: 1.5rem;
+  gap: 2rem;
+  margin: 30px 30px ;
+
 }
 
 .social-icons a {
