--- a/frontend/views/admin/editProduct.ejs
+++ b/frontend/views/admin/editProduct.ejs
@@ -8,7 +8,7 @@
   <script src="/scripts/adminProductForm.js" defer></script>
 </head>
 <body>
-  <%- include('../partials/header') %>
+  <%- include('../partials/header2') %>
 
   <main class="container">
     <h1>Edit Product</h1>
