--- a/frontend/views/admin/newPost.ejs
+++ b/frontend/views/admin/newPost.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>              
         
-        <%- include("../partials/header") %>
+        <%- include("../partials/header2") %>
 
         <section class="admin-section">
         <h1>🆕 New Blog Post</h1>
