--- a/frontend/views/partials/header2.ejs
+++ b/frontend/views/partials/header2.ejs
@@ -1,6 +1,6 @@
-<header class="site-header home-header">
-  <div class="container">
-    <nav class="main-nav">
+<header class="site-header2 home-header2">
+  <div class="container2">
+    <nav class="main-nav2">
       <ul>
         <li><a href="/">Home</a></li>|
         <li><a href="/shop">Shop</a></li>|
@@ -31,9 +31,5 @@
         </li>
       </ul>
     </nav>
-  </div>
-
-  <div class="logo-container">
-    <img src="/images/VentureCreations.webp" alt="Venture Creations Logo" class="vc-logo">
   </div>
 </header>
