--- a/frontend/views/admin/blogDashboard.ejs
+++ b/frontend/views/admin/blogDashboard.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>        
-        <%- include("../partials/header") %>
+        <%- include("../partials/header2") %>
 
         <section class="admin-section">
         <div class="admin-header">
