--- a/frontend/views/admin/editPost.ejs
+++ b/frontend/views/admin/editPost.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>        
 
-        <%- include("../partials/header") %>
+        <%- include("../partials/header2") %>
 
         <section class="admin-section">
         <h2>✏️ Edit Blog Post</h2>
