--- a/frontend/views/blog/blog.ejs
+++ b/frontend/views/blog/blog.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>                
         
-        <%- include("../partials/header") %>
+        <%- include("../partials/header2") %>
 
         <section class="blog-page">
         <h1>Our Blog</h1>
