--- a/frontend/views/blog/show.ejs
+++ b/frontend/views/blog/show.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>    
 
-    <%- include("../partials/header") %>
+    <%- include("../partials/header2") %>
 
     <main class="blog-single">
         <article class="blog-post">
