--- a/frontend/views/contact.ejs
+++ b/frontend/views/contact.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-        <%- include("./partials/header") %>
+        <%- include("./partials/header2") %>
 
             <section class="contact-section">
             <div class="contact-wrapper">
