--- a/frontend/views/customer/dashboard.ejs
+++ b/frontend/views/customer/dashboard.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <%- include("../partials/header") %>
+    <%- include("../partials/header2") %>
 
     <section class="dashboard">
         <div class="container">
