--- a/frontend/views/shop.ejs
+++ b/frontend/views/shop.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <%- include('partials/header') %>
+  <%- include('partials/header2') %>
 
   <main class="container">
     <h1 class="page-title">Our Collection</h1>
