--- a/frontend/views/shop/product.ejs
+++ b/frontend/views/shop/product.ejs
@@ -8,7 +8,7 @@
   <script src="/scripts/product.js"></script>
 </head>
 <body>
-  <%- include('../partials/header') %>
+  <%- include('../partials/header2') %>
 
   <main class="container product-details">
     <div class="product-images">
