--- a/frontend/views/shop/success.ejs
+++ b/frontend/views/shop/success.ejs
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <%- include('../partials/header') %>
+  <%- include('../partials/header2') %>
 
   <main class="container">
     <h1>Thank You!</h1>
