--- a/frontend/views/partials/footer.ejs
+++ b/frontend/views/partials/footer.ejs
@@ -28,7 +28,7 @@
             <% if (user.role === "Admin") { %>
               <li><a href="/admin">Admin Panel</a></li>|
             <% } else if (user.role === "Customer") { %>
-              <li><a href="/customer/dashboard">My Dashboard</a></li>
+              <li><a href="/customer/dashboard">Dashboard</a></li>|
             <% } %>
             <li><a href="/auth/logout">Logout</a></li>|
           <% } else { %>
