--- a/frontend/views/partials/header.ejs
+++ b/frontend/views/partials/header.ejs
@@ -13,7 +13,7 @@
           <% } else if (user.role === "Customer") { %>
             <li><a href="/customer/dashboard">Dashboard</a></li>|
           <% } %>
-          <li><a href="/auth/logout">Logout</a></li>|
+          <li><a href="/auth/logout">Logout</a></li>
         <% } else { %>
           <li><a href="/auth/register">Register</a></li>|
           <li><a href="/auth/google">Login</a></li>
