--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -25,6 +25,38 @@ body {
 }
 
 /* Navigation/Header Home Page*/
+.header-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  padding: 0 1rem;
+}
+
+.main-nav ul li:not(:last-child)::after {
+  content: "|";
+  margin-left: 1rem;
+  color: var(--blue);
+}
+
+/* Hamburger styles */
+.nav-toggle {
+  display: none;
+  flex-direction: column;
+  gap: 4px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+}
+
+.nav-toggle .bar {
+  width: 25px;
+  height: 3px;
+  background-color: var(--blue);
+  transition: 0.3s ease;
+}
+
 .logo-container {
   display: flex;
   justify-content: center;
@@ -44,6 +76,8 @@ body {
   background-color: var(--pink);
   color: var(--black);
   padding: 1rem 0;
+  position: relative;
+  z-index: 1500;
 }
 
 .main-nav {
@@ -87,8 +121,12 @@ body {
 }
 
 .main-nav {
-  margin-bottom: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
   font-family: var(--font-calgary);
+  margin-bottom: 100px;
 }
 
 .main-nav ul {
@@ -211,7 +249,6 @@ body {
   color: var(--pink);
   font-size: larger;
   margin-top: 75px;
-  /* font-weight: 700; */
 }
 
 .home-hero .btn:hover {
@@ -993,6 +1030,39 @@ body {
 
 
 /* Responsive Tweaks */
+@media (max-width: 768px) {
+  .nav-toggle {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 1rem;
+  }
+
+  .main-nav {
+    display: none !important;
+    flex-direction: column;
+    background-color: var(--pink);
+    width: 100%;
+    padding: 1rem 0;
+    position: static;
+  }
+
+  .main-nav.open {
+    display: flex !important;
+  }
+
+  .main-nav ul {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .main-nav ul li {
+    text-align: left;
+  }
+  .vc-logo {
+    max-width: 350px;
+  }
+}
+
 @media (min-width: 768px) {
   .product-detail {
     flex-direction: row;
