--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -435,7 +435,8 @@ body {
 .footer-left {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   width: 100%;
 }
 
