--- a/frontend/views/admin/allProducts.ejs
+++ b/frontend/views/admin/allProducts.ejs
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>All Products | Admin</title>
   <link rel="stylesheet" href="/css/styles.css" />
+  <script src="/scripts/home.js" defer></script>
+
 </head>
 <body>
   <%- include('../partials/header2') %>
