--- a/frontend/views/admin/editProduct.ejs
+++ b/frontend/views/admin/editProduct.ejs
@@ -6,6 +6,8 @@
   <title>Edit Product | Admin</title>
   <link rel="stylesheet" href="/css/styles.css" />
   <script src="/scripts/adminProductForm.js" defer></script>
+  <script src="/scripts/home.js" defer></script>
+
 </head>
 <body>
   <%- include('../partials/header2') %>
