--- a/frontend/views/shop/product.ejs
+++ b/frontend/views/shop/product.ejs
@@ -6,6 +6,8 @@
   <title><%= product.name %> | Venture Creations</title>
   <link rel="stylesheet" href="/css/styles.css">
   <script src="/scripts/product.js"></script>
+  <script src="/scripts/home.js" defer></script>
+
 </head>
 <body>
   <%- include('../partials/header2') %>
