--- a/frontend/views/partials/header2.ejs
+++ b/frontend/views/partials/header2.ejs
@@ -10,7 +10,7 @@
       </button>
     </div>
 
-    <nav class="main-nav2">
+    <nav class="main-nav2" id="mainNav">
       <ul>
         <li><a href="/">Home</a></li>|
         <li><a href="/shop">Shop</a></li>|
