--- a/frontend/views/partials/header2.ejs
+++ b/frontend/views/partials/header2.ejs
@@ -12,20 +12,20 @@
 
     <nav class="main-nav2" id="mainNav">
       <ul>
-        <li><a href="/">Home</a></li>|
-        <li><a href="/shop">Shop</a></li>|
-        <li><a href="/contact">Contact</a></li>|
-        <li><a href="/blog">Blog</a></li>|
+        <li><a href="/">Home</a></li>
+        <li><a href="/shop">Shop</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <li><a href="/blog">Blog</a></li>
 
         <% if (user) { %>
           <% if (user.role === "Admin") { %>
-            <li><a href="/admin">Admin Panel</a></li>|
+            <li><a href="/admin">Admin Panel</a></li>
           <% } else if (user.role === "Customer") { %>
-            <li><a href="/customer/dashboard">Dashboard</a></li>|
+            <li><a href="/customer/dashboard">Dashboard</a></li>
           <% } %>
-          <li><a href="/auth/logout">Logout</a></li>|
+          <li><a href="/auth/logout">Logout</a></li>
         <% } else { %>
-          <li><a href="/auth/register">Register</a></li>|
+          <li><a href="/auth/register">Register</a></li>
           <li><a href="/auth/google">Login</a></li>
         <% } %>
 
