--- a/frontend/public/css/styles.css
+++ b/frontend/public/css/styles.css
@@ -1041,9 +1041,32 @@ body {
   text-align: center;
 }
 
+@media (max-width: 1100px) and (min-width: 769px) {
+  .banner-text {
+    top: 0.2rem;
+    left: 0.8rem;
+    padding: 0.5rem;
+  }
+
+  .banner-text .line-top {
+    font-size: 1.2rem;
+  }
+
+  .banner-text .line-middle {
+    font-size: .8rem;
+  }
+
+  .banner-text .line-bottom {
+    font-size: 1rem;
+  }
+}
+
+
 
 /* Responsive Tweaks */
 @media (max-width: 768px) {
+
+  /* Navigation Home Page*/
   .nav-toggle {
     display: flex;
     justify-content: flex-start;
@@ -1075,7 +1098,7 @@ body {
     max-width: 350px;
   }
 
-  /* Every other page */
+  /* Navigation Every other page */
 
   .main-nav2 {
     display: none !important;
@@ -1097,6 +1120,24 @@ body {
   .main-nav2 ul li {
     text-align: left;
   }
+
+  /* Banners */
+  .banner-text {
+    font-size: 0.8rem;
+    padding: 0 0.5rem;
+    top: 0.5rem;
+    left: 0.5rem;
+  }
+
+  .banner-text .line-top {
+    font-size: 1rem;
+  }
+
+  .banner-text .line-middle,
+  .banner-text .line-bottom {
+    font-size: 0.9rem;
+  }
+
 
   /* Footer */
   .footer-row {
