--- a/frontend/views/admin/newPost.ejs
+++ b/frontend/views/admin/newPost.ejs
@@ -15,7 +15,7 @@
         <section class="admin-section">
           <h1>🆕 New Blog Post</h1>
 
-          <form action="/admin/blog/new" method="POST" class="product-form">
+          <form action="/admin/blog" method="POST" class="product-form">
             <label for="title">Title</label>
             <input type="text" name="title" id="title" required>
 
