--- a/frontend/views/blog/show.ejs
+++ b/frontend/views/blog/show.ejs
@@ -18,7 +18,7 @@
             <p class="blog-date"><%= post.createdAt.toLocaleDateString() %></p>
             
             <div class="blog-content">
-                <%= post.content %>
+                <%- post.content.replace(/\r?\n/g, "<br>") %>
             </div>
             
             <a href="/blog" class="btn btn-secondary">← Back to Blog</a>
