--- a/frontend/views/blog/blog.ejs
+++ b/frontend/views/blog/blog.ejs
@@ -29,7 +29,7 @@
                     <% } %>
 
                     <% if (post.description) { %>
-                        <p class="shortDescription"><%= post.description %></p>
+                        <p class="description"><%= post.shortDescription %></p>
                     <% } %>
 
                     <% if (post.hashtags && post.hashtags.length > 0) { %>
