--- a/frontend/views/blog/blog.ejs
+++ b/frontend/views/blog/blog.ejs
@@ -28,7 +28,7 @@
                         <p class="blog-topic"><strong>Topic:</strong> <%= post.topic %></p>
                     <% } %>
 
-                    <% if (post.description) { %>
+                    <% if (post.shortDescription) { %>
                         <p class="description"><%= post.shortDescription %></p>
                     <% } %>
 
